# Hetis

./: .clang-format  .clangd  .editorconfig  .gitignore  .runsettings  AGENTS.md  CMakeLists.txt  CMakePresets.json  Vulkan.code-workspace  trace-iocp.cmd
Mashiro/: CMakeLists.txt  probe_ops.cpp
Mashiro/benchmarks/: AsyncQueueBenchmark.cpp  CMakeLists.txt  QueueBenchmark.cpp  plot_async_queue_benchmarks.py  plot_queue_benchmarks.py
Mashiro/benchmarks/results/: async-domain-optimized-probe.csv  async-fanout-formal.csv  async-latency-formal.csv  async-mashiro-optimized-formal.csv  async-optimized-asan-quick.csv  async-optimized-final-asan.csv  async-queue-benchmark-report.md  async-ready-formal.csv  async-ready-producer-state-probe-latency.csv  async-ready-producer-state-probe.csv  async-ready-unstoppable-probe.csv  async-size-formal.csv  async-sync-wait-optimized-formal.csv  async-terminal-isolation-probe.csv  async-terminal-isolation-quick.csv  async-terminal-isolation-spin-probe.csv  async-throughput-formal.csv  queue-baseline-pinned.csv  queue-benchmark-report.md  queue-optimized-pinned.csv  queue-paired-pinned.csv  queue-summary.csv
Mashiro/demos/: CMakeLists.txt
Mashiro/demos/Core/: ToJsonDemo.cpp  ToStringDemo.cpp
Mashiro/demos/Playground/: IocpTimer.cpp  Main.cpp  StdexecPlay.cpp
Mashiro/src/Core/: ABI.cpp  StackTrace.cpp  StructuredLogger.cpp
Mashiro/src/Platform/: PlatformThread.cpp
Mashiro/tests/: CMakeLists.txt
Mashiro/tests/Async/: AsyncQueueTest.cpp  FondationsTest.cpp  GeneratorTest.cpp
Mashiro/tests/Core/: ABITest.cpp  AlgebraApproxTest.cpp  AlgebraTest.cpp  ChunkedSlotMapTest.cpp  ConcurrentObjectPoolTest.cpp  ConcurrentSlabArenaTest.cpp  DumbPtrTest.cpp  EigenOracleTest.cpp  FalseSharingTest.cpp  FixedStringTest.cpp  FlagsTest.cpp  GeomOpsTest.cpp  GeometryTest.cpp  HashTest.cpp  InlineFunctionTest.cpp  Int128Test.cpp  LinearAllocatorTest.cpp  MathUtilsTest.cpp  MpmcQueueTest.cpp  MpscQueueTest.cpp  PolymorphismTest.cpp  QuanterionTest.cpp  RefCountedMixinTest.cpp  SOATest.cpp  ScalarMathTest.cpp  SeqLockTest.cpp  SpscChannelTest.cpp  SpscRingBufferTest.cpp  StructuredLoggerTest.cpp  ToJsonTest.cpp  ToStringTest.cpp  TypeTraitsTest.cpp  TypesTest.cpp
Mashiro/tests/Math/: FunctionalTest.cpp  MatTest.cpp  MathStressTest.cpp  MathUtilsXform2DTest.cpp  MathUtilsXform3DTest.cpp  TrivialOpsTest.cpp  TypesTest.cpp  VecTest.cpp
Mashiro/tests/Platform/: EventChannelTest.cpp  PlatformBackendTest.cpp  SystemEventTest.cpp  ThreadContractTest.cpp
Mashiro/tests/Schedular/: GeneratorTest.cpp
Mashiro/tests/Support/: EigenBridge.h  Meta.h
Mashiro/tests/Surface/: ColorSpaceTest.cpp  WindowTest.cpp
Nova/: CMakeLists.txt
Nova/src/core/: Result.cpp
Nova/tests/: CMakeLists.txt
Nova/tests/core/: ErrorCodeTest.cpp
Sora/: CMakeLists.txt
Sora/benchmarks/: BenchmarkHarness.h  CMakeLists.txt
Sora/benchmarks/Core/: SOABenchmark.cpp
Sora/benchmarks/Math/: ValueBenchmark.cpp
Sora/demos/: CMakeLists.txt
Sora/demos/Common/: Classes.h  Common.h
Sora/demos/Core/: ABIDemo.cpp  AsyncEventCallbackDemo.cpp  CLIComplexDiscoveredC.cpp  CLIComplexLinkedA.cpp  CLIComplexModuleDemo.cpp  CLIComplexNestedD.cpp  CLIComplexRuntimeB.cpp  CLIDemo.cpp  CLIModuleDemo.cpp  CLIModuleLinkedAlpha.cpp  CLIModuleLinkedBeta.cpp  CLIModulePluginDelta.cpp  CLIModulePluginGamma.cpp  EventPortDemo.cpp  GetSetDemo.cpp  HashDemo.cpp  PolymorphismDemo.cpp  StackTraceDemo.cpp  ToStringDemo.cpp  TraitsDemo.cpp
Sora/demos/Experimental/: EventPortDemo.cpp
Sora/demos/Kernel/: AsyncEventCallbackDemo.cpp  BaseObjectDemo.Providers.cpp  BaseObjectDemo.cpp  CommandRuntimeDemo.cpp  EventHubDemo.cpp  EventPortDemo.cpp  IIDDemo.cpp
Sora/demos/Math/: PrimaryFunctionsDemo.cpp
Sora/demos/PAL/: ModuleDemo.cpp
Sora/demos/Resources/: EmbeddedPakIndexDemo.cpp  EmbeddedPakModule.cpp  ResourcesDemo.cpp
Sora/include/Sora/: Common.h  ErrorCode.h  Meta.h  Platform.h
Sora/src/Core/: ABI.cpp  CpuProfiler.cpp  CrashHandler.cpp  Diagnostics.cpp  StackTrace.cpp  StructuredLogger.cpp
Sora/src/PAL/: AtomicFile.cpp  Clipboard.cpp  Environment.cpp  File.cpp  FileMapping.cpp  FileWatcher.cpp  GlobalMemory.cpp  Module.cpp  NativeCrashStream.cpp  NativeError.cpp  Process.cpp  SystemAPI.cpp  Thread.cpp
Sora/src/Resources/: ResourceRegistry.cpp
Sora/tests/: CMakeLists.txt  TestMain.cpp
Sora/tests/Core/: CLIFragmentTest.cpp  CLITest.cpp  ChunkedSlotMapTest.cpp  ComAdaptorTest.cpp  ConfigurationPathTest.cpp  CpuProfilerTest.cpp  CrashHandlerProcessTest.cpp  DiagnosticsTest.cpp  DirectBufferTest.cpp  EnvironmentTest.cpp  FlagsTest.cpp  FunctionalTest.cpp  GuardTest.cpp  HiveTest.cpp  MemoryLayoutTest.cpp  PathTest.cpp  RefPtrTest.cpp  SOATest.cpp  SequenceLockTest.cpp  StopwatchTest.cpp  StringUtilsTest.cpp  StructuredLoggerTest.cpp  ToJsonTest.cpp  ToStringTest.cpp  ToStyledStringTest.cpp  UnicodeTest.cpp  UniqueResourceTest.cpp  UriTest.cpp  WireTest.cpp
Sora/tests/Math/: EigenAdaptorTest.cpp  SimdTest.cpp
Sora/tests/PAL/: ClipboardTest.cpp  EnvironmentTest.cpp  FileTest.cpp  GlobalMemoryTest.cpp  NativeCrashStreamTest.cpp  NativeErrorTest.cpp  ProcessTest.cpp  SystemAPITest.cpp  ThreadTest.cpp
Sora/tests/Render/: HandleTest.cpp
Sora/tests/Resources/: ResourcePackageTest.cpp  SettingsTest.cpp  SettingsTest.json
Sora/tools/: ApplySimdNaming.ps1  ImportGccSimd.ps1  SimdNamingTidy.yaml
Yuki/: CMakeLists.txt
Yuki/demos/: CMakeLists.txt
Yuki/docs/design/: 00-baseline-caa-v5.md  01-thesis.md  02-pillars-identity-interface-component.md  03-pillars-dispatch-tie-ownership-determinism.md  04-system-mechanics.md  05-reflection-and-perf.md  06-interop-and-limits.md  07-roadmap.md  README.md
Yuki/src/Core/: BaseUnknown.cpp  Closure.cpp  Dictionary.cpp  EagerChain.cpp  EpochRcu.cpp  Introspection.cpp  MergedDispatch.cpp  Meta.cpp  Object.cpp  Query.cpp  (+3 more)
Yuki/tests/: CMakeLists.txt
analysis/eventport-bench/: CMakeLists.txt  EventPortBench.cpp  REPORT.md  plot_eventport_bench.py
tests/00-Thirdparty/: CMakeLists.txt  main.cpp  stdexec_probe.cpp
tests/01-TaskShader/: CMakeLists.txt  main.cpp
(+469 files in other folders)
