function(add_sora_test CATEGORY TEST_NAME)
    set(TEST_TARGET Test.Sora.${CATEGORY}.${TEST_NAME})

    add_executable(${TEST_TARGET} ${CATEGORY}/${TEST_NAME}.cpp)
    target_include_directories(${TEST_TARGET} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
    target_link_libraries(${TEST_TARGET} PRIVATE Sora Catch2::Catch2WithMain)
    set_target_properties(${TEST_TARGET} PROPERTIES
        CXX_STANDARD 26
        CXX_STANDARD_REQUIRED ON
        FOLDER "Sora/Tests/${CATEGORY}"
    )
    vk_tp_deploy_runtime(${TEST_TARGET})
    catch_discover_tests(${TEST_TARGET})
    set_property(GLOBAL APPEND PROPERTY SORA_TEST_TARGETS ${TEST_TARGET})
endfunction()

include(CTest)
include(Catch)

add_sora_test(Resources ResourcePackageTest)
add_sora_test(Core CLITest)
add_sora_test(Core CLIFragmentTest)
add_sora_test(Core ComAdaptorTest)
add_sora_test(Core DiagnosticsTest)
add_sora_test(Core RefPtrTest)
add_sora_test(Core SOATest)
add_sora_test(Core StructuredLoggerTest)
add_sora_test(Core StringUtilsTest)
add_sora_test(Core StopwatchTest)
add_sora_test(Core UnicodeTest)
add_sora_test(Core ToStringTest)
add_sora_test(Core ToJsonTest)
add_sora_test(Core ToStyledStringTest)
add_sora_test(Core ConfigurationPathTest)
add_sora_test(Core EnvironmentTest)
add_sora_test(Core HiveTest)
add_sora_test(Core MemoryLayoutTest)
add_sora_test(Core SequenceLockTest)
add_sora_test(Core WireTest)
add_sora_test(Core FunctionalTest)
add_sora_test(Core UriTest)
add_sora_test(PAL ClipboardTest)
add_sora_test(PAL EnvironmentTest)
add_sora_test(PAL NativeErrorTest)
add_sora_test(Math SimdTest)
